objects/SH2__DSH_Object_Storage_Usage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SH2__Counts_Towards_Limits__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Counts Towards Data Storage Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Data_Storage_Used__c</fullName>
        <inlineHelpText>Calculated data storage for the given object (in KB).</inlineHelpText>
        <label>Data Storage Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Global_Describe_Index__c</fullName>
        <label>Global Describe Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Records_Deleted__c</fullName>
        <label>Records Deleted By Storage Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Object Storage Usage</label>
</CustomObject>